--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@ title: "Sambamba: process your BAM data faster!"
     <div class="container">
     <div class="lword">Tools</div>
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="/docs/sambamba-view.html">view</a></li>
-        <li><a href="/docs/sambamba-sort.html">sort</a></li>
-        <li><a href="/docs/sambamba-index.html">index</a></li>
-        <li><a href="/docs/sambamba-merge.html">merge</a></li>
-        <li><a href="/docs/sambamba-slice.html">slice</a></li>
-        <li><a href="/docs/sambamba-flagstat.html">flagstat</a></li>
-        <li><a href="/docs/sambamba-markdup.html">markdup</a></li>
+        <li><a href="{{ site.baseurl }}/docs/sambamba-view.html">view</a></li>
+        <li><a href="{{ site.baseurl }}/docs/sambamba-sort.html">sort</a></li>
+        <li><a href="{{ site.baseurl }}/docs/sambamba-index.html">index</a></li>
+        <li><a href="{{ site.baseurl }}/docs/sambamba-merge.html">merge</a></li>
+        <li><a href="{{ site.baseurl }}/docs/sambamba-slice.html">slice</a></li>
+        <li><a href="{{ site.baseurl }}/docs/sambamba-flagstat.html">flagstat</a></li>
+        <li><a href="{{ site.baseurl }}/docs/sambamba-markdup.html">markdup</a></li>
       </ul>
     </div>
   </div>
@@ -25,12 +25,12 @@ title: "Sambamba: process your BAM data faster!"
         <li>
           <a href="https://github.com/lomereiter/sambamba/wiki/%5Bsambamba-view%5D-Filter-expression-syntax">
             Powerful filtering
-          </a> with <code>sambamba <a href="/docs/sambamba-view.html">view</a> --filter</code>
+          </a> with <code>sambamba <a href="{{ site.baseurl }}/docs/sambamba-view.html">view</a> --filter</code>
         </li>
-        <li>Picard-like SAM header merging in the <a href="/docs/sambamba-merge.html">merge</a> tool</li>
+        <li>Picard-like SAM header merging in the <a href="{{ site.baseurl }}/docs/sambamba-merge.html">merge</a> tool</li>
         <li>Optional <code>[==>&nbsp;&nbsp;&nbsp;&nbsp;]</code> for operations on whole BAMs</li>
-        <li>Fast copying of a region to a new file with the <a href="/docs/sambamba-slice.html">slice</a> tool</li>
-        <li><a href="/docs/sambamba-markdup.html">Duplicate marking/removal</a>, using the Picard criteria</li>
+        <li>Fast copying of a region to a new file with the <a href="{{ site.baseurl }}/docs/sambamba-slice.html">slice</a> tool</li>
+        <li><a href="{{ site.baseurl }}/docs/sambamba-markdup.html">Duplicate marking/removal</a>, using the Picard criteria</li>
         <li style="margin-top: 20px">And, of course, the biggest one (yeah, <i>literally</i>!),
           <p style="font-size:24px; text-align: center; margin: 10px">
             <u>PERFORMANCE</u> &nbsp;&nbsp;&nbsp;
