--- a/index.html
+++ b/index.html
@@ -2,25 +2,10 @@
 layout: layout
 title: "Sambamba: process your BAM data faster!"
 ---
-<div class="row">
-  <div id="tools" class="block col-sm-2">
-    <div class="container">
-    <div class="lword">Tools</div>
-      <ul class="nav nav-pills nav-stacked">
-        <li><a href="{{ site.baseurl }}/docs/sambamba-view.html">view</a></li>
-        <li><a href="{{ site.baseurl }}/docs/sambamba-sort.html">sort</a></li>
-        <li><a href="{{ site.baseurl }}/docs/sambamba-index.html">index</a></li>
-        <li><a href="{{ site.baseurl }}/docs/sambamba-merge.html">merge</a></li>
-        <li><a href="{{ site.baseurl }}/docs/sambamba-slice.html">slice</a></li>
-        <li><a href="{{ site.baseurl }}/docs/sambamba-flagstat.html">flagstat</a></li>
-        <li><a href="{{ site.baseurl }}/docs/sambamba-markdup.html">markdup</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="block col-sm-6">
-    <div class="title">Features</div>
-    <div id="features">
+<div class="myrow">
+  <div class="mycontainer">
+    <div id="features" class="block">
+      <div class="title">Features</div>
       <ul>
         <li>
           <a href="https://github.com/lomereiter/sambamba/wiki/%5Bsambamba-view%5D-Filter-expression-syntax">
@@ -34,63 +19,64 @@ title: "Sambamba: process your BAM data faster!"
         <li style="margin-top: 20px">And, of course, the biggest one (yeah, <i>literally</i>!),
           <p style="font-size:20px; text-align: center; margin: 10px">
             <u>PERFORMANCE</u> &nbsp;&nbsp;&nbsp;
-            </p>
+          </p>
         </li>
       </ul>
     </div>
-  </div>
 
-  <div id="bm" class="block col-sm-4">
+    <div id="bm" class="block">
+      
+      <div class="cword">Benchmarks</div>
+      <div class="bm-case">
+        Indexing 17GB file on 8 cores, HDD
+        <table>
+          <th><td>real time, s</td><td>user time, s</td></th>
+          <tr><td>sambamba</td><td>31</td><td>69</td></tr>
+          <tr><td>samtools</td><td>70</td><td>67</td></tr>
+        </table>
+      </div>
 
-    <div class="cword">Benchmarks</div>
-    <div class="bm-case">
-      Indexing 17GB file on 8 cores, HDD
-      <table>
-        <th><td>real time, s</td><td>user time, s</td></th>
-        <tr><td>sambamba</td><td>31</td><td>69</td></tr>
-        <tr><td>samtools</td><td>70</td><td>67</td></tr>
-      </table>
-    </div>
-
-    <div class="bm-case">
-      Copying reads aligned to the 3rd chr. to a new BAM file
-    <br/>   (8 threads, empty file cache)
-      <table>
-        <th><td>real time, s</td><td>user time, s</td></th>
-        <tr><td>sambamba</td><td>5.8</td><td>38.0</td></tr>
-        <tr><td>samtools</td><td>8.5</td><td>33.7</td></tr>
-      </table>
-    </div>
-
+      <div class="bm-case">
+        Copying reads aligned to the 3rd chr. to a new BAM file
+        <br/>   (8 threads, empty file cache)
+        <table>
+          <th><td>real time, s</td><td>user time, s</td></th>
+          <tr><td>sambamba</td><td>5.8</td><td>38.0</td></tr>
+          <tr><td>samtools</td><td>8.5</td><td>33.7</td></tr>
+        </table>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="row">
-  <div id="install" class="col-sm-8">
-    <div class="cword kword">Installation</div>
-    <div>
-      <p> For Linux 64-bit systems, precompiled binaries are
-      <a href="https://www.dropbox.com/sh/v05fsb5aarob3xe/iUHgyud31a/sambamba">available</a>.
-      </p>
-      <p>
-        In order to compile from source,
-        install <a href="http://dlang.org/download.html">DMD</a>
-        compiler and run in terminal
-        <code>git clone --recursive https://github.com/lomereiter/sambamba.git</code>
-        followed by<code>cd sambamba && make release</code>. The binary will be
-        in <code>build/</code>.
-      </p>
-    </div>
-  </div>
+<div class="myrow">
 
-  <div id="info" class="col-sm-4">
-    <div class="info-block">
-      <div class="cword kword">License: <font color="black">GPL v2+</font></div>
+  <div class="mycontainer">
+    <div id="install" class="block">
+      <div class="cword kword">Installation</div>
+      <div>
+        <p> For Linux 64-bit systems, precompiled binaries are
+          <a href="https://www.dropbox.com/sh/v05fsb5aarob3xe/iUHgyud31a/sambamba">available</a>.
+        </p>
+        <p>
+          In order to compile from source,
+          install <a href="http://dlang.org/download.html">DMD</a>
+          compiler and run in terminal
+          <code>git clone --recursive https://github.com/lomereiter/sambamba.git</code>
+          followed by<code>cd sambamba && make release</code>. The binary will be
+          in <code>build/</code>.
+        </p>
+      </div>
     </div>
-    <div class="info-block">
-      <div class="cword kword">Supported platforms:</div>
-      <div class="cword">Linux, Mac OS X</div>
+
+    <div id="info" class="block">
+      <div class="info-block" style="margin-top: -10px">
+        <div class="cword kword">License: <br/><font color="black">GPL v2+</font></div>
+      </div>
+      <div class="info-block">
+        <div class="cword kword">Platforms:
+          <br/><font color="black">Linux, Mac OS X</font></div>
+      </div>
     </div>
   </div>
 </div>
