updated installation instructions

--- a/index.html
+++ b/index.html
@@ -64,16 +64,15 @@ title: "Sambamba: process your BAM data faster!"
     <div id="install" class="block">
       <div class="cword kword">Installation</div>
       <div>
-        <p> For Linux 64-bit systems, precompiled binaries are
-          <a href="https://www.dropbox.com/sh/v05fsb5aarob3xe/iUHgyud31a/sambamba">available</a>.
+        <p>
+        Precompiled binaries are <a href="https://github.com/lomereiter/sambamba/releases">available</a> for 64-bit systems.
         </p>
         <p>
           In order to compile from source,
-          install <a href="http://dlang.org/download.html">DMD</a>
+          install <a href="https://github.com/ldc-developers/ldc">LDC</a>
           compiler and run in terminal
           <code>git clone --recursive https://github.com/lomereiter/sambamba.git</code>
-          followed by<code>cd sambamba && make release</code>. The binary will be
-          in <code>build/</code>.
+          followed by<code>cd sambamba && make sambamba-ldmd2-64</code>. 
         </p>
       </div>
     </div>
